--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -31,14 +31,17 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="408dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Card"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_show_menu"
-        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/btn_show_menu" />
+        app:layout_constraintStart_toStartOf="@+id/btn_show_menu"
+        app:layout_constraintTop_toBottomOf="@+id/start_service"
+        app:layout_constraintVertical_bias="0.725" />
 
     <Button
         android:id="@+id/login"
@@ -119,7 +122,7 @@
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="@+id/btn_show_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.135"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/btn_show_menu"
         app:layout_constraintTop_toTopOf="@+id/btn_show_menu"
         app:layout_constraintVertical_bias="1.0" />
@@ -135,7 +138,7 @@
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="@+id/card"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.221"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/card"
         app:layout_constraintTop_toTopOf="@+id/card"
         app:layout_constraintVertical_bias="0.0" />
@@ -184,17 +187,56 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/database"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
+        android:text="Database"
         app:layout_constraintBottom_toBottomOf="@+id/button_custom"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_custom"
         app:layout_constraintTop_toTopOf="@+id/button_custom"
         app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/okhttp_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="OkHttp"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="@+id/button_news"
+        app:layout_constraintStart_toEndOf="@+id/button_news"
+        app:layout_constraintTop_toTopOf="@+id/button_news"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/litepal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="136dp"
+        android:text="litepal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/database"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/database" />
+
+    <Button
+        android:id="@+id/button_permission"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="128dp"
+        android:text="permission"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="@+id/litepal"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/litepal"
+        app:layout_constraintTop_toTopOf="@+id/database" />
 
 </android.support.constraint.ConstraintLayout>
